[project]
name = "kokoro-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kokoro",
    "misaki[en]>=0.9.4",
    "pip>=25.2",
    "pipewire-python>=0.2.3",
    "simpleaudio>=1.0.4",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[tool.uv.sources]
kokoro = { git = "https://github.com/hexgrad/kokoro" }
